--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
-#root {
-  max-width: 1280px;
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@700&display=swap');
+
+html, body, #root {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   text-align: center;
